# PatrimEtude

./: INSTALLER.md  README.md  package.json
.github/workflows/: build.yml
patrimetude/: index.html  vite.config.js
patrimetude/src/: main.js  tauri-bridge.js
patrimetude/src-tauri/: tauri.conf.json
patrimetude/src-tauri/src/: main.rs
patrimetude/src/styles/: projects.css
src/: projects-screen.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
