[package]
name = "patrimetude"
version = "1.0.0"
description = "Logiciel d'étude de prix pour chantiers de monuments historiques"
authors = ["PatrimÉtude"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
  "dialog-all",
  "fs-all",
  "path-all",
  "shell-open"
]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
